[package]
name = "get-if-addrs"
version = "0.1.0"
authors = ["Katsutoshi Horie <mps299792458@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/hrektts/get-if-addrs"
homepage = "https://github.com/hrektts/get-if-addrs"
documentation = "https://katsutoshihorie.com/get-if-addrs"
description = """
Retrieves configuration of the network interfaces of the local system.
"""

[dependencies]
c-linked-list = { git = "https://github.com/hrektts/c-linked-list" }
libc = "0.2"
